# dnd-combat-simulator

./: .gitignore  CONTEXT.md  README.md  SESSIONS.md  ai-decision-layer.md  combat-state-model.md  engine-design.md  pyproject.toml
docs/: CONTEXT.md  MONSTER_BUILD_GUIDE.md  PARALLEL_BUILD_GUIDE.md  SESSIONS.md  content-roadmap-and-calibration.md  data-sources.md  deferred-combat-followups.md  deferred-noncombat-features.md  engine-capabilities.md  phase-3-plan.md  positioning-model.md  positioning-redteam-brief.md  red_team_obstacle_course_addendum.md  red_team_obstacle_course_prompt.md  sim-modes.md  spell-content-roadmap.md  spell-master-list.csv  stages-1-3-execution.md  stages-1-3-plan.md  stages-1-3-redteam-brief.md  stocktake-2026-06-02.md
engine/: README.md  __init__.py  __main__.py  archive.py  cli.py  creation.py  loader.py  manifest.py  metrics.py  narrative.py  pc_schema.py  primitives.py  reports.py  resolution.py
schema/: README.md
scripts/: add_classes_column.py  wire_audit.py
sims/: FINDINGS.md  _trace_grind.py  _verify_monster_dpr.py  adventuring_day.py  boss_montecarlo.py  day_difficulty.py  dial_curve.py  events.json  events_run2.json  events_run3.json  report.md  report_run2_post_casters.md  report_run3_positioning.md  resource_stress.py  run_boss_sim.py  run_first_sim.py  sculpt_fireball_demo.py
tests/: _srd_helpers.py  test_acid_arrow.py  test_action_economy.py  test_action_surge.py  test_active_search.py  test_agonizing_blast.py  test_ai_v1.py  test_aid.py  test_altitude_kiting.py  test_animate_objects.py  test_aoe.py  test_aoe_cone_line.py  (+314 more)
(+1066 files in other folders)
