[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dnd-combat-simulator"
version = "0.1.0"
description = "Headless D&D 5e combat simulator — Phase 1 engine skeleton"
authors = [{ name = "Phil (MarsBoundJ)" }]
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "PyYAML>=6.0",
    "jsonschema>=4.0",
]
readme = "README.md"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
sim = "engine.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["engine*"]
exclude = ["tests*", "schema*", "docs*"]
